--- a/style/style.css
+++ b/style/style.css
@@ -139,3 +139,27 @@ body {
 .pagination__text {
   margin-left: 100px;
 }
+
+.main__table__input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  border: none;
+}
+
+.editable-block__buttons {
+  position: absolute;
+  z-index: 100;
+  top: -33px;
+  right: 0;
+}
+
+.button-edit {
+  background-color: green;
+  color: #fff;
+  font-size: 10px;
+  transition: 0.2s;
+}
